bug: Fixed font-weight on p, .timeframe__btn not showing correct font weight

--- a/styles.css
+++ b/styles.css
@@ -76,7 +76,7 @@ main {
 
 p,
 .timeframe__btn {
-  font-weight: (--fw-light);
+  font-weight: var(--fw-light);
   color: var(--clr-navy-200);
 }
 
